--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5781,6 +5781,11 @@ p {
   #logo:hover {
     color: #fff; }
 
+#logout {
+  cursor: default; }
+  #logout:hover {
+    background-color: transparent; }
+
 /* footer */
 footer {
   margin-top: 45px;
@@ -5848,5 +5853,13 @@ input {
 
 .panel {
   margin-top: 50px; }
+
+/* Users edit */
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center; }
+  .gravatar_edit .gravatar {
+    float: none;
+    max-width: 100px; }
 
 /*# sourceMappingURL=app.css.map */
