--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5862,4 +5862,14 @@ input {
     float: none;
     max-width: 100px; }
 
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+  padding-left: 0; }
+  .users li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid #eeeeee; }
+
 /*# sourceMappingURL=app.css.map */
