finish user edit, update,index,delete

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5872,4 +5872,9 @@ input {
     padding: 10px 0;
     border-bottom: 1px solid #eeeeee; }
 
+.delete-btn {
+  float: right;
+  position: relative;
+  right: 0; }
+
 /*# sourceMappingURL=app.css.map */
